# agentos

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
agents/: code_executor.py  critic.py  planner.py  retrieval.py  web_search.py
api/: main.py  middleware.py  routes.py  schemas.py
cache/: redis_cache.py
config/: __init__.py  settings.py
core/: graph.py  llm.py  state.py
docker/: Dockerfile  docker-compose.yml
memory/: embeddings.py  qdrant_store.py
scripts/: init_qdrant.py
tests/: test_agents.py  test_api.py  test_graph.py
tools/: code_tools.py  search_tools.py
