[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentos"
version = "0.1.0"
description = "Autonomous Multi-Agent Research System built on LangGraph"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
keywords = ["langgraph", "agents", "rag", "qdrant", "fastapi", "llm"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: FastAPI",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # ── LangChain / LangGraph ecosystem ──────────────────────────────────
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-core>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-groq>=0.2.0",
    "langchain-openai>=0.2.0",          # optional; only used if LLM_PROVIDER=openai
    "langchain-qdrant>=0.2.0",
    "langgraph-checkpoint",              # in-process MemorySaver

    # ── Vector DB ────────────────────────────────────────────────────────
    "qdrant-client[fastembed]>=1.12.0",

    # ── Embeddings (local, no API key required) ───────────────────────────
    "sentence-transformers>=3.0.0",

    # ── Web Search ────────────────────────────────────────────────────────
    "duckduckgo-search>=6.0.0",
    "tavily-python>=0.5.0",             # optional; fallback search
    "httpx>=0.27.0",                    # async HTTP for scraping

    # ── Code execution sandbox ────────────────────────────────────────────
    "RestrictedPython>=7.0",

    # ── API ───────────────────────────────────────────────────────────────
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "sse-starlette>=2.1.0",

    # ── Cache / State ─────────────────────────────────────────────────────
    "redis[hiredis]>=5.2.0",

    # ── Observability ─────────────────────────────────────────────────────
    "langsmith>=0.1.0",

    # ── Utilities ─────────────────────────────────────────────────────────
    "structlog>=24.0.0",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",      # for FastAPI TestClient
    "respx>=0.21.0",      # async HTTP mocking
    "ruff>=0.6.0",
    "mypy>=1.11.0",
    "pre-commit>=3.8.0",
]

[project.scripts]
agentos = "api.main:main"

[tool.hatch.version]
path = "agentos/__version__.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP"]
ignore = ["B008", "B904"]

[tool.ruff.lint.isort]
known-first-party = ["agents", "api", "cache", "config", "core", "memory", "tools"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --cov=. --cov-report=term-missing --cov-report=html"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "*/migrations/*"]
